Fix alignment issues

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -56,9 +56,11 @@ ul {
 
 .left-items {
   display: flex;
+  align-items: center;
 }
 
 .right-items {
   display: flex;
   gap: 16px;
+  align-items: center;
 }
